--- a/WebApplication1/AngularApp.csproj
+++ b/WebApplication1/AngularApp.csproj
@@ -150,6 +150,12 @@
   <ItemGroup>
     <Content Include="App\angular.module.js" />
     <Content Include="App\Components\AboutPage\about-page.html" />
+    <Content Include="App\Data\Hunter.js" />
+    <Content Include="App\Data\Titan.js" />
+    <Content Include="App\Data\Warlock.js" />
+    <Content Include="App\Main.css" />
+    <Content Include="App\ToolTip.css" />
+    <Content Include="App\Data\Weapons.js" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="favicon.ico" />
